--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -65,13 +65,13 @@
             <div class="form-group" >
                 <label>Gender:</label> &nbsp &nbsp
                 <label class="radio-inline">
-                    <input type="radio" class="gender" name="gender" value="male" checked>Male
+                    <input type="radio" th:field="*{gender}" class="gender" name="gender" value="male" checked>Male
                 </label>
                 <label class="radio-inline">
-                    <input type="radio" class="gender" name="gender" value="female">Female
+                    <input type="radio" th:field="*{gender}" class="gender" name="gender" value="female">Female
                 </label>
                 <label class="radio-inline">
-                    <input type="radio" class="gender" name="gender" value="others">Others
+                    <input type="radio" th:field="*{gender}" class="gender" name="gender" value="others">Others
                 </label>
             </div>
             <div class="form-group">
@@ -86,10 +86,10 @@
 
                 <label>Select Department:</label>
                 <select class="form-control" th:field="*{department}">
-                    <option>Java</option>
-                    <option>IOS</option>
-                    <option>JS</option>
-                    <option>Testing</option>
+                    <option value="Java">Java</option>
+                    <option value="IOS">IOS</option>
+                    <option value="JS">JS</option>
+                    <option value="Testing  ">Testing</option>
                 </select>
             </div>
             <div class="form-group">
