--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -51,7 +51,7 @@
     <div class ="col-sm-4"></div>
     <div class="col-sm-4">
         <center><h3><span class="title">Log</span><span>in</span></h3></center>
-        <form th:action="@{/login}" method="post">
+        <form th:action="@{/login}" method="get">
             <div class="form-group">
                 <label for="email">Email address:</label>
                 <input type="email" class="form-control" id="email">
