--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,42 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Registration</title>
-    <style>
-.button{
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 12px;
-    margin: 4px 2px;
-    transition-duration: 0.3s;
-    cursor: pointer;
-}
-.button1{
-    background-color: white;
-    color: black;
-    border: 2px solid black;
-}
-.button1:hover {
-    background-color: black;
-    color: white;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.button2{
-    background-color: white;
-    border: 2px solid black;
-}
-.button2:hover {
-    background-color: black;
-    color: white;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.title {
-    color: red;
-}
-    </style>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/design.css}" />
     <!-- Bootstrap library -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <!-- jQuery library -->
@@ -95,13 +60,14 @@
             </div>
             <div class="form-group">
                 <label>Password:</label>
-                <input type="password" class="form-control" th:field="*{passwd}" name="passwd" placeholder="Enter Password" />
+                <input type="password" class="form-control" th:field="*{password}" name="password" placeholder="Enter Password" />
             </div>
 
             <div class="form-group">
                 <label>Confirm Password:</label>
-                <input type="password" class="form-control" name="confirmpasswd" placeholder="Confirm Password" id="confirmpasswd" />
+                <input type="password" class="form-control" name="confirmpassword" placeholder="Confirm Password" id="confirmpasswd" />
             </div>
+
             <div>
                 <span><button type="submit" class="button1" >Register</button></span>
                 <span><button class="button1" type="reset" value="reset">Clear</button></span>
