Registration & Login Working with ADMIN ROLE.

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,70 +2,95 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>Registration Form</title>
-	<link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Registration</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/design.css}" />
+    <!-- Bootstrap library -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<form th:action="@{/}" method="get">
-		<button class="btn btn-md btn-warning btn-block" type="Submit">Go To Login Page</button>
-	</form>	
-	
 	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<form autocomplete="off" action="#" th:action="@{/registration}"
-					th:object="${user}" method="post" class="form-horizontal"
-					role="form">
-					<h2>Registration Form</h2>
-					<div class="form-group">
-						<div class="col-sm-9">
-						<label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
-								class="validation-message"></label>
-						<input type="text" th:field="*{name}" placeholder="Name"
-								class="form-control" /> 
-						</div>
+		<div class ="col-sm-3"></div>
+		<div class="col-sm-6">
+			<form autocomplete="off" action="#" th:action="@{/registration}"
+				th:object="${user}" method="post" class="form-horizontal"
+				role="form">
+				<center><h3><span class="title">Regist</span><span>ration</span></h3></center>
+				<div class="form-group">
+					<div>
+					<input type="text" th:field="*{firstName}" placeholder="FirstName"
+							class="form-control" />
 					</div>
-
-					<div class="form-group">
-						<div class="col-sm-9">
-						<label	th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
-								class="validation-message"></label>
-							<input type="text" th:field="*{lastName}"
-								placeholder="Last Name" class="form-control" /> 
-						</div>
+				</div>
+				<div class="form-group">
+					<div>
+						<input type="text" th:field="*{lastName}"
+							placeholder="Last Name" class="form-control" />
 					</div>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="text" th:field="*{email}" placeholder="Email"
-								class="form-control" /> <label
-								th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
-								class="validation-message"></label>
-						</div>
+				</div>
+				<div class="form-group">
+					<div>
+						<input type="text" th:field="*{email}" placeholder="Email"
+							class="form-control" />
 					</div>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="password" th:field="*{password}"
-								placeholder="Password" class="form-control" /> <label
-								th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
-								class="validation-message"></label>
-						</div>
+				</div>
+				<div class="form-group">
+					<div>
+						<input type="password" th:field="*{password}"
+							placeholder="Password" class="form-control" /> <label
+							th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
+							class="validation-message"></label>
 					</div>
-
-					<div class="form-group">
-						<div class="col-sm-9">
-							<button type="submit" class="btn btn-primary btn-block">Register User</button>
-						</div>
+				</div>
+				<div class="form-group" >
+					<label>Gender:</label> &nbsp &nbsp
+					<label class="radio-inline">
+						<input type="radio" th:field="*{gender}" class="gender" name="gender" value="male" checked>Male
+					</label>
+					<label class="radio-inline">
+						<input type="radio" th:field="*{gender}" class="gender" name="gender" value="female" >Female
+					</label>
+					<label class="radio-inline">
+						<input type="radio" th:field="*{gender}" class="gender" name="gender" value="others" >Others
+					</label>
+				</div>
+				<div class="form-group">
+					<div>
+						<input type="text" th:field="*{mobileNo}" placeholder="Mobile No."
+							   class="form-control" />
 					</div>
-					
-					<span th:utext="${successMessage}"></span>
-					
-					
-				</form>
-			</div>
+				</div>
+				<div class="form-group">
+					<div>
+						<label>Select Department:</label>
+						<select class="form-control" th:field="*{department}">
+							<option value="Null" disabled>Select</option>
+							<option value="Java">Java</option>
+							<option value="IOS">IOS</option>
+							<option value="JS">JS</option>
+							<option value="Testing  ">Testing</option>
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<div>
+						<span><button class="button1" type="submit" >Register</button></span>
+						<span><button class="button1" type="reset" value="reset">Clear</button></span>
+					</div>
+				</div>
+				<span th:utext="${successMessage}"></span>
+			</form>
+			<form th:action="@{/login}" method="get">
+				<br>
+				&nbsp&nbsp Already a User? <button class="button2" type="submit">Sign in</button>
+			</form>
 		</div>
+		<div class ="col-sm-3"></div>
 	</div>
 
 </body>
