--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login Page</title>
-    <!--<link rel="stylesheet" type="text/css" th:href="@{/css/design.css}">-->
+    <link rel="stylesheet" type="text/css" th:href="@{/css/design.css}">
     <!-- Bootstrap library -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <!-- jQuery library -->
@@ -29,9 +29,9 @@
                 <input type="password" name="password" class="form-control" id="password" />
             </div>
 
-           <!-- <div align="center" th:if="${param.error}">
+            <div align="center" th:if="${param.error}">
                 <p style="font-size: 20; color: #FF1C19;">Email or Password invalid, please verify</p>
-            </div>-->
+            </div>
 
             <div class="checkbox">
                 <label><input type="checkbox"> Remember me</label>
