--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -16,10 +16,10 @@
 		<div class="panel-group" style="margin-top:40px">
 			<div class="panel panel-primary">
 				<div class="panel-heading">
+					<h4>Admin Console</h4>
 					<span th:utext="${userName}"></span>
 				</div>
 				<div class="panel-body">
-					<h3>Admin Console</h3>
 					<table class="table table-hover" id="users">
 						<thead>
 						<tr>
@@ -42,10 +42,10 @@
 							<td th:text="${user.lastName}">Class</td>
 							<td th:text="${user.gender}">male</td>
 							<td th:text="${user.email}">test@example.com</td>
-							<td th:text="${user.mobileno}">123456789</td>
+							<td th:text="${user.mobileNo}">123456789</td>
 							<td th:text="${user.department}">testdept</td>
 							<td th:text="${user.active}">1</td>
-							<td th:text="${user.role}">TestAdmin</td>
+							<td th:text="${user.Role.role}">TestAdmin</td>
 							<td>
 								<a th:href="@{/edit/{id}(id=${user.id})}"
 								   class="btn btn-primary">
