--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -69,7 +69,7 @@
 					<div>
 						<label>Select Department:</label>
 						<select class="form-control" th:field="*{department}">
-							<option value="Null" disabled>Select</option>
+							<option value="Null" selected disabled>Select</option>
 							<option value="Java">Java</option>
 							<option value="IOS">IOS</option>
 							<option value="JS">JS</option>
