--- a/src/main/resources/templates/admin/updateMeetingRoom.html
+++ b/src/main/resources/templates/admin/updateMeetingRoom.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <meta charset="UTF-8">
-    <title>Add Room</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/design.css}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Update Meeting Room</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/design.css}" />
     <!-- Bootstrap library -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <!-- jQuery library -->
@@ -17,10 +17,10 @@
 <div class="container">
     <div class ="col-sm-3"></div>
     <div class="col-sm-6">
-        <form autocomplete="off" action="#" th:action="@{/admin/add-room}"
-              th:object="${meetingRoom}" method="post" class="form-horizontal"
+        <form autocomplete="off" action="#" th:action="@{'/admin/updateMeetingRoom/'+ ${id}}"
+              th:object="${meetingRoom}" th:method="PUT" class="form-horizontal"
               role="form">
-            <center><h3><span class="title">Add&nbsp;</span><span>Room</span></h3></center>
+            <center><h3><span class="title">Update&nbsp;</span><span>Meeting Room</span></h3></center>
             <div class="form-group">
                 <div>
                     <input type="text" th:field="*{name}" placeholder="Room Name"
@@ -30,7 +30,7 @@
             <div class="form-group">
                 <div>
                     <input type="text" th:field="*{location}"
-                           placeholder="Room location" class="form-control" />
+                           placeholder="Enter Location" class="form-control" />
                 </div>
             </div>
             <div class="form-group">
@@ -57,11 +57,11 @@
             </div>
             <div class="form-group">
                 <div>
-                    <span><button class="button1" type="submit" >Add</button></span>
+                    <span><button class="button1" type="submit" >Update</button></span>
                     <span><button class="button1" type="reset" value="reset">Clear</button></span>
                 </div>
             </div>
-            <h5><span th:utext="${successMessage}"></span></h5>
+            <span th:utext="${successMessage}"></span>
         </form>
     </div>
     <div class ="col-sm-3"></div>
