Updated Ui Changes for Admin. added Booking Details.

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -13,39 +13,29 @@
 <body>
     <div th:switch="${role}">
         <div th:case="ADMIN">
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">Book A MeetingRoom</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="/admin/user-management/1">Users</a></li>
+                        <li><a href="/meeting-room-details/1">Rooms</a></li>
+                        <li><a href="/admin/booking-requests/1">Bookings</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+                    </ul>
+                </div>
+            </nav>
             <div class="container">
                 <div class="panel-group" style="margin-top:40px">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <h4>Admin Console</h4>
-                            <span th:utext="${userName}"></span>
-                            <div style="float:right;">
-                                <form th:action="@{/logout}" method="get">
-                                    <button class="button2" name="logout"
-                                            type="Submit">Logout</button>
-                                </form>
-                            </div>
                         </div>
                         <div class="panel-body">
-                            <table class="table table-hover">
-                                <tbody>
-                                    <tr><td>
-                                        <form th:action="@{/admin/user-management}" method="get">
-                                            <button class="button2" type="submit">User Management</button>
-                                        </form>
-                                    </td></tr>
-                                    <tr><td>
-                                        <form th:action="@{/meeting-room-details}" method="get">
-                                            <button class="button2" type="submit">Meeting Room Details</button>
-                                        </form>
-                                    </td></tr>
-                                    <tr><td>
-                                        <form th:action="@{/admin/booking-requests}" method="get">
-                                            <button class="button2" type="submit">Booking Requests</button>
-                                        </form>
-                                    </td></tr>
-                                </tbody>
-                            </table>
+                            <span th:utext="${userName}"></span>
                         </div>
                     </div>
                 </div>
