--- a/src/main/resources/templates/admin/booking-requests.html
+++ b/src/main/resources/templates/admin/booking-requests.html
@@ -1,10 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Booking-requests</title>
-</head>
-<body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 
+<head>
+    <title>Admin Page</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/design.css}" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+    <script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="/admin/user-management/1">Users</a></li>
+            <li><a href="/meeting-room-details/1">Rooms</a></li>
+            <li><a href="/admin/booking-requests/1">Bookings</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+        </ul>
+    </div>
+</nav>
+<div class="container">
+    <div class="panel-group" style="margin-top:40px">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h4>Admin Console</h4>
+                <h5>Booking Requests</h5>
+                <span th:utext="${userName}"></span>
+            </div>
+            <div class="panel-body">
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Meeting Room Name</th>
+                        <th>Date</th>
+                        <th>Status</th>
+                        <th>Booked By</th>
+                        <th></th>
+                        <th colspan="2">Operations</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="booking: ${bookingDetails}">
+                        <td th:text="${booking.id}">1</td>
+                        <td th:text="${booking.MeetingRoom.name}">Test</td>
+                        <td th:text="${booking.date}">Class</td>
+                        <td th:text="${booking.status}">male</td>
+                        <td th:text="${booking.User.firstName}">test@example.com</td>
+                        <td th:if="${booking.status} == 'Pending'">
+                            <form th:action="@{/admin/confirmRequest/{id}(id=${booking.id})}" method="post">
+                                <button class="btn btn-primary" name="confirm"
+                                        type="Submit">Confirm</button>
+                            </form>
+                        </td>
+                        <td th:if="${booking.status} == 'Pending' or ${booking.status} == 'Confirmed'">
+                            <form th:action="@{/admin/cancelRequest/{id}(id=${booking.id})}" method="post">
+                                <button class="btn btn-danger" name="confirm"
+                                        type="Submit">Reject</button>
+                            </form>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <span class="text-center" th:utext="${successMessage}"></span>
+        </div>
+    </div>
+</div>
+<div class="row" th:fragment="pagination">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+        <nav aria-label="Pagination">
+            <ul class="pagination justify-content-center">
+                <li class="page-item" th:each="pageNumber : ${pageNumbers}" >
+                    <a class="page-link" th:href="@{|/admin/booking-requests/${pageNumber}|}" th:text=${pageNumber}>1</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="col-md-2"></div>
+</div>
 </body>
 </html>
