--- a/src/main/resources/templates/meeting-room-details.html
+++ b/src/main/resources/templates/meeting-room-details.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Admin Page</title>
+    <title>Meeting Room Details</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/design.css}" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
@@ -13,6 +13,21 @@
 <body>
 <div th:switch="${role}">
     <div th:case="ADMIN">
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="/admin/user-management/1">Users</a></li>
+                    <li><a href="/meeting-room-details/1">Rooms</a></li>
+                    <li><a href="/admin/booking-requests/1">Bookings</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="container">
             <div class="panel-group" style="margin-top:40px">
                 <div class="panel panel-primary">
@@ -20,15 +35,9 @@
                         <h4><span th:utext="${meetingRoomDetails}"></span></h4>
                         <span th:utext="${userName}"></span>
                         <div style="float:right;">
-                            <form th:action="@{/logout}" method="get">
-                                <button class="button2" name="logout"
-                                        type="Submit">Logout</button>
-                            </form>
-                        </div>
-                        <div style="float:right;">
                             <form th:action="@{/admin/add-room}" method="get">
                                 <button class="button2" name="add-room"
-                                        type="Submit">Add Room</button>
+                                        type="Submit">Add</button>
                             </form>
                         </div>
                     </div>
@@ -70,6 +79,19 @@
             </div>
         </div>
     </div>
+    <div class="row" th:fragment="pagination">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <nav aria-label="Pagination">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item" th:each="pageNumber : ${pageNumbers}" >
+                        <a class="page-link" th:href="@{|/meeting-room-details/${pageNumber}|}" th:text=${pageNumber}>1</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
     <div th:case="USER">
         <div class="container">
             <div class="panel-group" style="margin-top:40px">
@@ -102,12 +124,12 @@
                                 <td th:text="${meetingRoom.facilities}">[AC]</td>
                                 <td th:text="${meetingRoom.status}">Available</td>
                                 <td>
-                                    <a th:href="@{/user/bookRoom/{id}(id=${meetingRoom.id})}"
+                                    <a th:href="@{/bookRoom/{id}(id=${meetingRoom.id})}"
                                        class="btn btn-primary">Book
                                     </a>
                                 </td>
                                 <td>
-                                    <a th:href="@{/user/cancelBooking/{id}(id=${meetingRoom.id})}"
+                                    <a th:href="@{/cancelRequest/{id}(id=${meetingRoom.id})}"
                                        class="btn btn-danger">Cancel
                                     </a>
                                 </td>
