--- a/src/main/resources/templates/admin/updateMeetingRoom.html
+++ b/src/main/resources/templates/admin/updateMeetingRoom.html
@@ -6,14 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Update Meeting Room</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/design.css}" />
-    <!-- Bootstrap library -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/meeting-room-details/1">
+                <i class="fas fa-chevron-circle-left"></i>
+            </a>
+            <a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li><a href="/admin/user-management/1">Users</a></li>
+            <li class="active"><a href="/meeting-room-details/1">Rooms</a></li>
+            <li><a href="/admin/booking-requests/1">Bookings</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+        </ul>
+    </div>
+</nav>
 <div class="container">
     <div class ="col-sm-3"></div>
     <div class="col-sm-6">
