--- a/src/main/resources/templates/meeting-room-details.html
+++ b/src/main/resources/templates/meeting-room-details.html
@@ -16,11 +16,12 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
+                    <a class="navbar-brand" href="/homepage"><i class="fas fa-chevron-circle-left"></i></a>
                     <a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/admin/user-management/1">Users</a></li>
-                    <li><a href="/meeting-room-details/1">Rooms</a></li>
+                    <li><a href="/admin/user-management/1">Users</a></li>
+                    <li class="active"><a href="/meeting-room-details/1">Rooms</a></li>
                     <li><a href="/admin/booking-requests/1">Bookings</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -74,37 +75,49 @@
                             </tbody>
                         </table>
                     </div>
-                    <p class="text-center" th:utext="${successMessage}"></p>
+                    <p class="text-center" th:utext="${successMessage}">successMessage</p>
+                </div>
+                <div class="row" th:fragment="pagination">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <nav aria-label="Pagination">
+                            <ul class="pagination justify-content-center">
+                                <li class="page-item" th:each="pageNumber : ${pageNumbers}" >
+                                    <a class="page-link" th:href="@{|/meeting-room-details/${pageNumber}|}" th:text=${pageNumber}>1</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="col-md-2"></div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row" th:fragment="pagination">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <nav aria-label="Pagination">
-                <ul class="pagination justify-content-center">
-                    <li class="page-item" th:each="pageNumber : ${pageNumbers}" >
-                        <a class="page-link" th:href="@{|/meeting-room-details/${pageNumber}|}" th:text=${pageNumber}>1</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <div class="col-md-2"></div>
-    </div>
+
+
     <div th:case="USER">
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/homepage"><i class="fas fa-chevron-circle-left"></i></a>
+                    <a class="navbar-brand active" href="#">Book A MeetingRoom</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li><a href="/user/user-profile">User Profile</a></li>
+                    <li class="active"><a href="/meeting-room-details/1">Rooms</a></li>
+                    <li><a href="/user/booking-status/1">Bookings</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="container">
             <div class="panel-group" style="margin-top:40px">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h4><span th:utext="${meetingRoomDetails}"></span></h4>
                         <span th:utext="${userName}"></span>
-                        <div align="right">
-                            <form th:action="@{/logout}" method="get">
-                                <button class="button2" name="logout"
-                                        type="Submit">Logout</button>
-                            </form>
-                        </div>
                     </div>
                     <div class="panel-body">
                         <table class="table table-hover">
@@ -114,7 +127,7 @@
                                 <th>Location</th>
                                 <th>Facilities</th>
                                 <th>Status</th>
-                                <th colspan="2">Operations</th>
+                                <th>Operations</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -128,16 +141,24 @@
                                        class="btn btn-primary">Book
                                     </a>
                                 </td>
-                                <td>
-                                    <a th:href="@{/cancelRequest/{id}(id=${meetingRoom.id})}"
-                                       class="btn btn-danger">Cancel
-                                    </a>
-                                </td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
                     <p class="text-center" th:utext="${successMessage}"></p>
+                </div>
+                <div class="row" th:fragment="pagination">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <nav aria-label="Pagination">
+                            <ul class="pagination justify-content-center">
+                                <li class="page-item" th:each="pageNumber : ${pageNumbers}" >
+                                    <a class="page-link" th:href="@{|/meeting-room-details/${pageNumber}|}" th:text=${pageNumber}>1</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="col-md-2"></div>
                 </div>
             </div>
         </div>
