User profile fixed.

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -48,7 +48,7 @@
                         <a class="navbar-brand active" href="#">Book A MeetingRoom</a>
                     </div>
                     <ul class="nav navbar-nav">
-                        <li><a th:href="@{'/user/user-profile/'+${id}}">User Profile</a></li>
+                        <li><a href="/user/user-profile">User Profile</a></li>
                         <li><a href="/meeting-room-details/1">Rooms</a></li>
                         <li><a href="/user/booking-status/1">Bookings</a></li>
                     </ul>
